# auto-agent

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_SPEC.md  docker-compose.yml  example.py  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/api/: routes.py  websocket.py
app/core/: graph.py  state.py
app/core/nodes/: __init__.py  analyzer.py  generator.py  planner.py  quality.py  searcher.py
app/models/: enums.py  schemas.py
app/services/: duckduckgo_search.py  llm.py  parser.py  search.py  serper_search.py  unified_search.py  vector_store.py
app/utils/: cost_tracker.py  logger.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: ResearchModal.vue
frontend/src/composables/: useResearch.ts
frontend/src/types/: index.ts  research.ts
tests/: conftest.py
tests/integration/: test_research_workflow.py
tests/unit/: test_planner_node.py  test_search_service.py
